tdf#130639 sw layout: fix table position

at fallback "switch off repeating header"
by removing temporary page break immediately.

Follow-up of commit f7e071a00542c414a7e9d7bcf4434d908f225e59
(tdf#88496 DOCX: disable long repeating table header).

Change-Id: I3ae62456fd50f3f3fa25bfea5326a8eb9bef01c6