sw/source/core/layout/tabfrm.cxx
@@ -2494,6 +2494,14 @@ void SwTabFrame::MakeAll(vcl::RenderContext* pRenderContext)
                     }
 
                     const bool bSplitError = !Split( nDeadLine, bTryToSplit, ( bTableRowKeep && !(bAllowSplitOfRow || bEmulateTableKeepSplitAllowed) ) );
+
+                    // tdf#130639 don't start table on a new page after the fallback "switch off repeating header"
+                    if (bSplitError && nRepeat > GetTable()->GetRowsToRepeat())
+                    {
+                        setFrameAreaPositionValid(false);
+                        break;
+                    }
+
                     if (!bTryToSplit && !bSplitError)
                     {
                         --nUnSplitted;
